my third update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangabandhu Sheikh Mujibur Rahaman Tunnel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             inventore aliquid unde ipsum neque doloremque nisi sit recusandae, impedit, quae necessitatibus tempora
             incidunt rerum?</p>
     </div>
-    <div>
+    <div class="action_form">
         <form action="information">
             <ul>
                 <li><input type="text" name="" id="first name" placeholder="First Name"></li>
